# openavl

./: .gitignore  LICENSE  README.md  pyproject.toml  render.yaml
.github/workflows/: ci.yml
docs/: user_manual.html
examples/: rectangular_wing_opt.py  supra_aero_sweep.py  supra_example.py  supra_geomapi_example.py  supra_geometry.py  supra_load_factor.py
src/: __init__.py  aic.py  airfoil.py  amode.py  ba_trans.py  cdcl.py  constants.py  deriv.py  exec.py  geometry.py  linalg.py  mass.py  parser.py  setup.py  solver.py  spacing.py  spline.py  state.py  trefftz.py  trim.py  util.py  vortex.py
src/aero/: __init__.py  aic.py  ba_trans.py  cdcl.py  cpoml.py  forces.py  trefftz.py  vortex.py
src/analysis/: __init__.py  amode.py  deriv.py  trim.py
src/core/: __init__.py  exec.py  reporting.py  setup.py  solver.py  state.py
src/fileio/: __init__.py  cad_export.py  mass.py  parser.py
src/geom/: __init__.py  airfoil.py  display.py  geometry.py  spacing.py  spline.py
src/geometry/: __init__.py  _convert.py  aircraft.py  airfoil.py  body.py  cdcl_polar.py  control.py  section.py  wing.py
src/jax/: __init__.py  aic.py  analysis.py  backend.py  cdcl.py  forces.py  freestream.py  geom_jax.py  openmdao.py  openmdao_group.py  setup.py  snapshot.py  solve.py  solver.py  trefftz.py  types.py  vortex.py
src/math/: __init__.py  linalg.py  util.py
src/plotting/: __init__.py  aircraft3d.py  cp_plot.py  lift_distribution.py
src/web/: __init__.py  __main__.py  app.py  geometry_export.py  session.py
tests/: conftest.py  helpers.py
tests/core/: test_aero.py  test_aic.py  test_airfoil.py  test_amode.py  test_ba_trans.py  test_bdforc.py  test_cad_export.py  test_cdcl.py  test_cdcl_polar.py  test_clmax.py  test_constants.py  test_cp_plot.py  test_cpoml.py  test_deriv.py  test_exec.py  test_geometry.py  test_geometry_api.py  test_geometry_convert.py  test_lift_distribution.py  test_linalg.py  test_mass.py  test_parser.py  test_reporting.py  test_setup.py  test_solver_results.py  test_spacing.py  test_spline.py  (+5 more)
(+49 files in other folders)
